IMDB_Movie_Sentiment_classification_Bidirectional_LSTM.ipynb

--- a/Deep_Learning_practice/Week6/Sequence_to_sequence_learning_for_performing_number_addition.ipynb
+++ b/Deep_Learning_practice/Week6/Sequence_to_sequence_learning_for_performing_number_addition.ipynb
@@ -1389,9 +1389,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db77ae3a",
+   "metadata": {},
+   "source": [
+    "# Reference \n",
+    "\n",
+    "- https://keras.io/examples/nlp/addition_rnn/\n",
+    "- https://medium.com/@nutanbhogendrasharma/sequence-to-sequence-learning-with-neural-networks-to-perform-number-addition-7ef0df7afaa4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bf7f6ba",
+   "id": "18975ca6",
    "metadata": {},
    "outputs": [],
    "source": []
